--- a/rpass/etc/rpass.conf
+++ b/rpass/etc/rpass.conf
@@ -1,8 +1,5 @@
+# Attention!!!
+# This file is automatically created.
+# Please do not manually configure this file.
+# You may lose access to the system.
 [users]
-user1 = LSDJFHGVBDNCKFHD
-user2 = LSDJFHGVBDNCKYHD
-user3 = LSDJFHGVBDNCKFHY
-user4 = LSDJFHGVBDNCKYHS
-user5 = LSDJFHGVBDNCKFHA
-
-
